Fix nitpicks from code rabbit